pm10935/force-app/main/default/objects/PM10935_Repro__c/PM10935_Repro__c.object-meta.xml
<CustomObject>
    <description>PM-10935 reproduction object</description>
    <label>PM10935 Repro</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM10935 Repros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>