pm10935/force-app/main/default/objects/PM10935_Repro__c/fields/FieldA__c.field-meta.xml
<CustomField>
    <fullName>FieldA__c</fullName>
    <label>Field A</label>
    <type>Text</type>
    <length>80</length>
</CustomField>