pm10935/force-app/main/default/objects/PM10935_Repro__c/fields/FieldB__c.field-meta.xml
<CustomField>
    <fullName>FieldB__c</fullName>
    <label>Field B</label>
    <type>Text</type>
    <length>80</length>
</CustomField>