pm10935/force-app/main/default/objects/PM10935_Repro__c/fields/FieldC__c.field-meta.xml
<CustomField>
    <fullName>FieldC__c</fullName>
    <label>Field C</label>
    <type>Text</type>
    <length>80</length>
</CustomField>