pm10935/force-app/main/default/objects/PM10935_Repro__c/fields/FieldD__c.field-meta.xml
<CustomField>
    <fullName>FieldD__c</fullName>
    <label>Field D</label>
    <type>Text</type>
    <length>80</length>
</CustomField>