pm10935/force-app/main/default/objects/PM10935_Repro__c/fields/FieldE__c.field-meta.xml
<CustomField>
    <fullName>FieldE__c</fullName>
    <label>Field E</label>
    <type>Text</type>
    <length>80</length>
</CustomField>